syntax = "proto3";

package tutorial;

option java_package = "proto";
option java_outer_classname = "UpdateFilePacketMetadataSuccessful";

message UpdateFilePacketMetadataSuccessfulDetails {
  string fileName = 1;
  uint64 packetNumber = 2;
}